# LABSoft-Public

./: .gitmodules  README.md
src/: CMakeLists.txt  LABSoft.cpp  LABSoft.h  main.cpp
src/LAB/: LAB.cpp  LAB.h  LAB_Digital_Circuit_Checker.cpp  LAB_Digital_Circuit_Checker.h  LAB_Function_Generator.cpp  LAB_Function_Generator.h  LAB_Logic_Analyzer.cpp  LAB_Logic_Analyzer.h  LAB_Module.cpp  LAB_Module.h  LAB_Ohmmeter.cpp  LAB_Ohmmeter.h  LAB_Oscilloscope.cpp  LAB_Oscilloscope.h  LAB_Oscilloscope_Trigger.cpp  LAB_Voltmeter.cpp  LAB_Voltmeter.h
src/LAB/Software/: LAB_Calibration.cpp  LAB_Calibration.h  LAB_Data_Measurer.cpp  LAB_Data_Measurer.h  LAB_Exporter.cpp  LAB_Exporter.h  LAB_LABChecker_Digital.cpp  LAB_LABChecker_Digital.h  LAB_Oscilloscope_Display.cpp  LAB_Oscilloscope_Display.h
src/LABSoft_GUI/: LABSoft_GUI.cpp  LABSoft_GUI.fl  LABSoft_GUI.h  LABSoft_GUI_Exporter_Data_Table.cpp  LABSoft_GUI_Exporter_Data_Table.h  LABSoft_GUI_Fl_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Choice_With_Scroll.h  LABSoft_GUI_Fl_Input.cpp  LABSoft_GUI_Fl_Input.h  LABSoft_GUI_Fl_Input_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Input_Choice_With_Scroll.h  LABSoft_GUI_Fl_Slider.cpp  LABSoft_GUI_Fl_Slider.h  LABSoft_GUI_LABChecker_Digital_Input_Table.cpp  LABSoft_GUI_LABChecker_Digital_Input_Table.h  LABSoft_GUI_LABChecker_Digital_Output_Table.cpp  LABSoft_GUI_LABChecker_Digital_Output_Table.h  LABSoft_GUI_Logic_Analyzer_Add_Channel_Signal_Window.cpp  LABSoft_GUI_Logic_Analyzer_Add_Channel_Signal_Window.h  LABSoft_GUI_Logic_Analyzer_Display.cpp  LABSoft_GUI_Logic_Analyzer_Display.h  LABSoft_GUI_Oscilloscope_Calibration_Table.cpp  LABSoft_GUI_Oscilloscope_Calibration_Table.h  LABSoft_GUI_Oscilloscope_Display.cpp  LABSoft_GUI_Oscilloscope_Display.h  LABSoft_GUI_Oscilloscope_Internal_Display.cpp  LABSoft_GUI_Oscilloscope_Internal_Display.h  LABSoft_GUI_Sheet.cpp  LABSoft_GUI_Sheet.h
src/LABSoft_GUI/FLUID References/: LABSoft_GUI_Logic_Analyzer_Add_Channel_Window  LABSoft_GUI_Logic_Analyzer_Add_Channel_Window.cpp  (+7 more)
src/LABSoft_Presenter/: LABSoft_Presenter.cpp  LABSoft_Presenter.h  LABSoft_Presenter_Digital_Circuit_Checker.cpp  LABSoft_Presenter_Digital_Circuit_Checker.h  LABSoft_Presenter_Function_Generator.cpp  LABSoft_Presenter_Function_Generator.h  LABSoft_Presenter_Logic_Analyzer.cpp  LABSoft_Presenter_Logic_Analyzer.h  LABSoft_Presenter_Ohmmeter.cpp  LABSoft_Presenter_Ohmmeter.h  LABSoft_Presenter_Oscilloscope.cpp  LABSoft_Presenter_Oscilloscope.h  LABSoft_Presenter_Unit.cpp  LABSoft_Presenter_Unit.h  LABSoft_Presenter_Voltmeter.cpp  LABSoft_Presenter_Voltmeter.h
src/LAB_Libraries/: LAB_AD9833.cpp  LAB_AD9833.h  LAB_MCP23S17.cpp  LAB_MCP23S17.h  LAB_MCP4XXX.cpp  LAB_MCP4XXX.h
src/Utility/: LABSoft_GUI_Label.cpp  LABSoft_GUI_Label.h  LABSoft_GUI_Label_Values.h  LAB_Constants.h  LAB_Defaults.cpp  LAB_Defaults.h  LAB_Definitions.h  LAB_Encryptor  LAB_Encryptor.cpp  LAB_Encryptor.h  LAB_Enumerations.h  LAB_Utility_Functions.cpp  LAB_Utility_Functions.h  encrypt.cpp  test  test.cpp
(+25 files in other folders)
